Correction Coeur version Mobile/Tablette

--- a/css/moyenneres.css
+++ b/css/moyenneres.css
@@ -99,6 +99,10 @@ article header p {
 .BoutonCommander{
     margin: 40px 0 50px 0;
 }
+.CoeurVideRestaurant{
+    margin-top: 50px;
+    margin-right: 60px;
+}
 /***************************************************************************Footer**************************************************************************************/
 footer i{
     margin: 0 12% 0 0;
